# mono_tease_me

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.staging  FIXES_APPLIED.md  MOBILE_COMPATIBILITY_REPORT.md  Makefile  PRODUCTION_AUDIT.md  README.md  alembic.ini  amplify.yml  check_memories.py  compose.production.yml  compose.staging.yml  compose.yml  customHttp.yml  db_sections.md  deadcode.md  eslint.config.ts  heart.html  index.html  package-lock.json  package.json  playwright.config.ts  posthog-setup-report.md  pyproject.toml  run.md  tailwind.config.js  test.html  test_api.py  test_audio.py  test_elevenlabs.py  test_ffmpeg.py  test_mp3.py  test_tts.py  test_updates.py  tsconfig.json  tsconfig.tsbuildinfo  (+5 more)
.github/: copilot-instructions.md
alembic/: 8b1c2d3e4f5a_add_influencer_knowledge_rag_tables.py  c9d8e7f6a5b4_remove_unused_influencer_owner_and_prompts.py  env.py
app/: main.py  scheduler.py
docs/: ARCHITECTURE.md  BACKUP.md  MAINTENANCE.md  MAKEFILE_USAGE.md  VERSION.md  VERSIONING.md  adult-browser-voice-frontend.md  adult-character-api-frontend.md  backend-staging-reference.md  fastapi_api_logging.md  frontend-admin-adult-character-assets.md  frontend-staging-reference.md  frontend_knowledge_integration.md  git-commands.md  influencer-character-editor-api-frontend.md  logging_guidelines.md  pr-summary-guidelines.md  production-deploy.md  self-hosted-macos-staging.md
e2e/: auth.setup.ts  user-flow.test.ts
leotests/: anchor.html  hardcoreSample.css  hardcoreSample.html  heart.html  index.html  landingPage.html  landingpage.css  profileDetails.css  profileDetails.html  test.html
logs/: app.log.2026-02-23
public/: maintenance.html  site.webmanifest  sw.js  version.json
scripts/: backfill_trial_exhausted.py  bump_version.py  db_restore.sh  deploy-backend-staging.sh  deploy-staging.sh  fake_topup.py  fix_prices.py  get_all_memory_list.py  insert_juliana.py  rename_influencer_id.py  reset_trial.py  serve-dist.mjs  serve-dist.sh  test_get_memories.py  test_ip_country.py  version.mjs
src/: App.css  App.jsx  AppRoutes.jsx  custom-elements.d.ts  env.ts  index.css  main.jsx  main.tsx  service-worker.js
tests/: test_admin_email_assets.py  test_admin_influencer_assets.py  test_admin_influencer_publication.py  test_adult_browser_voice.py  test_auth_complete_profile.py  (+21 more)
(+1551 files in other folders)
